[gd_scene load_steps=7 format=3 uid="uid://d0xsch44b6cui"]

[ext_resource type="Theme" uid="uid://c8o0eqhos064x" path="res://scenes/gui/main_theme.tres" id="1_wpbjb"]
[ext_resource type="Script" path="res://scenes/gui/ingame_menus/challenger.gd" id="2_1nle7"]
[ext_resource type="FontFile" uid="uid://cq2arlv6kofqa" path="res://scenes/gui/Montserrat-Medium.ttf" id="3_s3ghr"]
[ext_resource type="FontFile" uid="uid://ck46vwy1hmbit" path="res://scenes/gui/BAD.ttf" id="4_vxj2t"]

[sub_resource type="LabelSettings" id="LabelSettings_07y35"]
font = ExtResource("3_s3ghr")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_twhbq"]
font = ExtResource("4_vxj2t")
font_size = 19

[node name="Challenger" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_wpbjb")
script = ExtResource("2_1nle7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Timer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Timer"]
layout_mode = 2
text = "TIME"
label_settings = SubResource("LabelSettings_07y35")
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer/Timer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_07y35")
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="VBoxContainer/Timer"]
unique_name_in_owner = true
autostart = true

[node name="ConsumptionScore" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ConsumptionScore"]
layout_mode = 2
text = "Consumption Score"
label_settings = SubResource("LabelSettings_twhbq")
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer/ConsumptionScore"]
unique_name_in_owner = true
layout_mode = 2
text = "0000"
label_settings = SubResource("LabelSettings_twhbq")
horizontal_alignment = 1

[node name="StarCollectionProgress" type="ProgressBar" parent="VBoxContainer/ConsumptionScore"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
show_percentage = false
